Blogs/cert-manager/ingress_demo_app.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: product-page
  namespace: demo-app
spec:
  ingressClassName: nginx
  rules:
  - host: productpage.local
    http:
      paths:
      - backend:
          service:
            name: productpage
            port:
              number: 9080
        path: /
        pathType: ImplementationSpecific
