Blogs/cert-manager/ingress_demo_app_route53.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: product-page-route53
  namespace: demo-app
spec:
  ingressClassName: nginx
  rules:
  - host: productpage.pbandark.com
    http:
      paths:
      - backend:
          service:
            name: productpage
            port:
              number: 9080
        path: /
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - productpage.pbandark.com
    secretName: productpage.pbandark.com
