Blogs/cert-manager/ingress_self-signed_CA.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: product-page-selfsigned-ca
  namespace: demo-app
spec:
  ingressClassName: nginx
  rules:
  - host: productpage123.example.com
    http:
      paths:
      - backend:
          service:
            name: productpage
            port:
              number: 9080
        path: /
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - productpage123.example.com
    secretName: productpage123.example.com
